added Exit Strategy

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <li><a href="diversions.html">Diversions</a><span class=fade> (poetry, sestina)</span></li>
     <!-- <li><a href="dogstar.html">Dog Star</a><span class=fade> (fiction, nano)</span></li> -->
     <li><a href="early_early_morning.html">Early Early Morning</a><span class=fade> (poetry)</span></li>
+    <li><a href="exit_strategy.html">Exit Strategy</a><span class=fade> (fiction, micro)</span></li>
     <li><a href="extraction.html">Extraction</a><span class=fade> (fiction, micro)</span></li>
     <!-- <li><a href="falling.html">Falling for Her</a><span class=fade> (fiction, nano)</span></li> -->
     <li><a href="mother.html">Mother</a><span class=fade> (fiction, short)</span></li>
