--- a/exit_strategy.html
+++ b/exit_strategy.html
@@ -27,7 +27,7 @@
       background-color: #333;    }
     body {
       margin: 0 auto;
-      max-width: 36em;
+      max-width: 42em;
       padding-left: 50px;
       padding-right: 50px;
       padding-top: 50px;
@@ -181,7 +181,8 @@ Science.”<br />
 neutron star, not take a core sample!”<br />
 “Ma’am, gravity flare extinguished the core. We need an hour to restore
 thrust.”<br />
-“You have…” “..nineteen minutes,” the computer announced.<br />
+“You have…”<br />
+“..nineteen minutes,” the computer announced.<br />
 The captain grimaced and cut comms.<br />
 </p>
 <p>“Science officer at bridge, Ma’am.”<br />
